--- a/package.json
+++ b/package.json
@@ -2,6 +2,18 @@
   "name": "word_cloud",
   "version": "0.1.0",
   "dependencies": {
+    "d3": "3.5.12",
     "d3-cloud": "1.2.1",
+    "lodash": "3.10.1"
+  },
+  "devDependencies": {
+    "bluebird": "3.1.1",
+    "gulp": "3.9.0",
+    "gulp-batch": "1.0.5",
+    "gulp-eslint": "1.1.1",
+    "gulp-watch": "4.3.5",
+    "mkdirp": "0.5.1",
+    "path": "0.12.7",
+    "rsync": "0.4.0"
   }
 }
